# SDiZO_proj

./: CMakeLists.txt  SDiZO_proj.hpp  main.cpp
Data/: test.json  test1.json
DataStructures/: DataStruct.hpp  Element.hpp  Element.tpp
DataStructures/BHeap/: BHeap.hpp  BHeap.tpp
DataStructures/DArray/: ArrayElement.hpp  ArrayElement.tpp  DynamicArray.hpp  DynamicArray.tpp
DataStructures/DList/: DLList.hpp  DLList.tpp  DynamicList.hpp  DynamicList.tpp  ListElement.hpp  ListElement.tpp
DataStructures/RBTree/: Node.hpp  Node.tpp  RBTree.hpp  RBTree.tpp
DataStructures/TestEnv/: Tester.hpp  Tester.tpp
UI/: UI.cpp  UI.hpp
Utility/: DataManager.cpp  DataManager.hpp  DataManager.tpp  Utilities.cpp  Utilities.hpp
